<resources>
    <string name="app_name">Mundo Animal</string>
    <string name="teiu">Teiu</string>
    <string name="_20_09_2022">20/09/2022</string>
    <string name="o_g_nero_de_r_pteis_tupinambis_da_fam_lia_teiidae_popularmente_conhecido_como_tei_ti_tiva_u_tejua_u_lagartiu_teju_tegu_jacuraru_jacuaru_jacuruaru_jacruaru_e_caruaru_compreende_os_maiores_lagartos_do_novo_mundo_podem_atingir_at_2_metros_de_comprimento_e_abrange_sete_esp_cies_em_dois_g_neros_todas_nativas_da_am_rica_do_sul">O gênero de répteis Tupinambis, da família Teiidae, é popularmente conhecido como teiú, tiú, tivaçu, tejuaçu, lagartiu, teju, tegu, jacuraru, jacuaru, jacuruaru, jacruaru e caruaru. Compreende os maiores lagartos do Novo Mundo (podem atingir até 2 metros de comprimento) e abrange sete espécies em dois gêneros, todas nativas da América do Sul</string>
    <string name="fonte_wikipedia_2022">Fonte: Wikipedia, 2022</string>
    <string name="anterior">Anterior</string>
    <string name="proximo">Proximo</string>
    <string name="todo">TODO</string>
    <string name="camale_o">Camaleão</string>
    <string name="_21_09_2022">21/09/2022</string>
    <string name="camale_o_refere_se_a_todos_os_r_pteis_pertencentes_fam_lia_chamaeleonidae_uma_das_mais_conhecidas_fam_lias_de_lagartos_distribu_dos_na_frica_sul_da_europa_e_da_sia_h_cerca_de_80_esp_cies_de_camale_es_a_maior_parte_delas_na_frica_ao_sul_do_saara_estando_tamb_m_presentes_em_portugal_e_na_espanha_os_camale_es_distinguem_se_de_outros_lagartos_pela_habilidade_de_algumas_esp_cies_em_trocar_de_cor_por_sua_l_ngua_r_pida_e_alongada_por_seus_olhos_que_podem_ser_movidos_independentemente_um_do_outro_que_possuem_uma_vis_o_de_360_graus_e_tendo_alguns_membros_da_fam_lia_cauda_pre_nsil">Camaleão refere-se a todos os répteis pertencentes à família Chamaeleonidae. É uma das mais conhecidas famílias de lagartos, distribuídos na África, sul da Europa e da Ásia. Há cerca de 80 espécies de camaleões, a maior parte delas na África, ao sul do Saara, estando também presentes em Portugal e na Espanha. Os camaleões distinguem-se de outros lagartos pela habilidade de algumas espécies em trocar de cor, por sua língua rápida e alongada, por seus olhos, que podem ser movidos independentemente um do outro, que possuem uma visão de 360 graus, e (tendo alguns membros da família) cauda preênsil.</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="iniciar">INICIAR</string>
</resources>